# hjimi_utils

./: .cursorrules  .gitignore  README.md  build.sh  config.md  create_c_project.py  create_dirs.sh  pyproject.toml  setup_package.py  upload_test.sh
Deprecated/: create_c_project_v1.py  setup_package_v1.py  setup_package_v2.py
examples/c_project_demo/: create_c_project.py
examples/openai_demo/: ai_conversation_manager.py  setup_package_openai.py
examples/pdf_processor_demo/: setup_package_pdfprocessor.py
examples/python_project_demo/: setup_package.py
hjimi_openai/: README.md  README_zh.md  pyproject.toml  requirements.txt
hjimi_openai/src/hjimi_openai/: __init__.py
hjimi_openai/test/: test_conversation_manager - copy.py  test_conversation_manager.py
hjimi_tools/: README.md  README_zh.md  pyproject.toml
hjimi_tools/src/hjimi_tools/: __init__.py  convert_file_encoder.py  copy_files.py  create_c_project.py  file_collector.py  setup_package.py
hjimi_tools/tests/: test_file_collector.py
pdf_processor/: README.md  README1.md  pyproject.toml  requirements.txt
pdf_processor/src/hjimi_pdf_processor/: PDFProcessor.py  __init__.py
pdf_processor/tests/: test_pdf_processor.py
tools/: build.sh  install.sh  upload_prod.sh  upload_test.sh
