[build-system]
requires = ["setuptools>=42", "wheel", "langchain-openai>=0.0.3", "langchain-core>=0.1.4", "langchain-community>=0.0.6", "langchain>=0.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hjimi_openai"
version = "0.1.0"
authors = [
{ name = "wenquanshan", email = "wenquanshan@sximi.com" },
]
description = "A demo package for OpenAI integration with conversation management and multiple output formats"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "langchain-openai>=0.0.3", "langchain-core>=0.1.4", "langchain-community>=0.0.6", "langchain>=0.1.0"
]

[project.urls]
"Homepage" = "https://github.com/zidanewenqsh/openai_demo"
"Bug Tracker" = "https://github.com/zidanewenqsh/openai_demo/issues"

