[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hjimi_tools"
version = "0.1.0"
authors = [
    { name = "wenquanshan", email = "wenquanshan@sximi.com" },
]
description = """A Project to setup a python project to build
A Project to generate a c language project to build
"""
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/zidanewenqsh/hjimi_utils"
"Bug Tracker" = "https://github.com/zidanewenqsh/hjimi_utils/issues"

