[build-system]
requires = ["setuptools>=42", "wheel", "PyPDF2>=3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hjimi_pdf_processor"
version = "0.1.2"
authors = [
{ name = "wenquanshan", email = "wenquanshan@sximi.com" },
]
description = "A utility package for PDF processing, including splitting, merging, and page counting"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/zidanewenqsh/pdf_processor"
"Bug Tracker" = "https://github.com/zidanewenqsh/pdf_processor/issues"

